# bifunctors-extra

./: CHANGELOG.md  README.md  bifunctors-extra.cabal  cabal.project  hie.yaml
src/Data/Bifunctor/: AlternatingList.hs  Coyoneda.hs  Free.hs  Monad.hs  TList.hs  Yoneda.hs
src/Data/Bifunctor/Kan/: Ran.hs
src/Data/Bifunctor/Monad/: Module.hs
